--- a/TESB/style.css
+++ b/TESB/style.css
@@ -11,10 +11,9 @@
    BODY
 ========================= */
 body {
-  /*font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background: #f2f2f2;
-  padding: 15px;*/
-   overflow-x: hidden;
+  padding: 15px;
 }
 
 /* =========================
@@ -80,9 +79,8 @@ h2 {
 ========================= */
 table {
   width: 100%;                /* 🔥 SAMA DENGAN INPUT */
-  /*border-collapse: collapse;
-  background: #ffffff;*/
-  table-layout: fixed;
+  border-collapse: collapse;
+  background: #ffffff;
 }
 
 /* =========================
@@ -136,11 +134,7 @@ tr:hover {
   }
 
   th, td {
-    /*font-size: 16px;
-    padding: 14px;*/
-     word-break: break-all;
-}
+    font-size: 16px;
+    padding: 14px;
   }
 }
-
-
